samples/_failures_safe/1761274185_bdadf1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b77804b.c: In function ‘main’:
./samples/SAFE/__tmp_8b77804b.c:170:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  170 |     TokenStack* stack
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_8b77804b.c:170:5: error: expected declaration or statement at end of input
